--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <title>My webpage!</title>
     <link rel="stylesheet" href="styles/styles.css" />
+    <script src="sounds.js" type="text/javascript"></script>
     
   </head>
   <body>
-    <h1>Welcome to our Rhyme Game!</h1>
+    <div class= "game-info">
+    <h1 class="welcome-message">Welcome to our Rhyme Game!</h1>
+    <p class="current-score">SCORE:0</p>
     <h2 class="timer">60</h2>
+    </div>
     <h4 id='date'></h4>
 
     <div class="main-div">
@@ -17,8 +21,25 @@
       
     <button class= "play">PLAY</button>
   </div>
-
-  
+   <div class="user-div">
+     <div class= "user-card">
+    <form class= "user-form">
+      <label for="name">Name:</label><br>
+      <input type="text" id="name" name="name" ><br><br>
+      <label for="username">Username:</label><br>
+      <input type="text" id="username" name="username" ><br><br>
+      <input type="submit" value="PLAY">
+      </form> 
+    </div>
+  </div>
+<!-- GAME OVER SCREEN-->
+  <div class="game-over">
+    <div class= "score-card">
+   <h1 class="game-over-message">GAME OVER</h1>
+   <h3 class="final-score"></h3>
+   <button class="play-again">PLAY AGAIN</button>
+   </div>
+ </div>
   </body>
   <script type="text/javascript" src="index.js" charset="utf-8"></script>
 </html>
